[package]
name = "dcutr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.29"
futures-timer = "3.0"
libp2p = { version = "0.53.1", features = [ "dns", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux"] }
libp2p-dcutr = "0.11.0"
log = "0.4"
tokio = { version = "1.34", features = ["macros", "net", "rt", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }