[package]
name = "relay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
tokio = { version = "1" , features = ["full"]}
async-trait = "0.1"
futures = "0.3.2"
libp2p = { version = "0.53.1", features = [ "tokio", "noise", "macros", "ping", "tcp", "identify", "yamux", "relay", "quic"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
